--- a/dfs.html
+++ b/dfs.html
@@ -1,23 +1,271 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Advanced CSS Demo</title>
+    <style>
+        :root {
+            --layer-base: 0;
+            --layer-mid: -10;
+            --layer-back: -20;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            line-height: 1.6;
+            overflow-x: hidden;
+            background: #1a1a1a;
+            color: #fff;
+        }
+
+        /* Parallax Container */
+        .parallax-container {
+            height: 100vh;
+            overflow-y: auto;
+            overflow-x: hidden;
+            perspective: 10px;
+            transform-style: preserve-3d;
+        }
+
+        .parallax-layer {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+
+        .layer-back {
+            transform: translateZ(var(--layer-back)) scale(3);
+            background: linear-gradient(45deg, #2c3e50, #3498db);
+        }
+
+        .layer-mid {
+            transform: translateZ(var(--layer-mid)) scale(2);
+            background: radial-gradient(circle at center, transparent 0%, rgba(0,0,0,0.8) 100%);
+        }
+
+        .layer-base {
+            transform: translateZ(var(--layer-base));
+        }
+
+        /* Grid Layout */
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            gap: 20px;
+            padding: 20px;
+            margin-top: 100vh;
+            background: rgba(26, 26, 26, 0.9);
+            position: relative;
+            z-index: 1;
+        }
+
+        .grid-item {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 8px;
+            transition: transform 0.3s ease;
+        }
+
+        .grid-item:hover {
+            transform: scale(1.05);
+        }
+
+        .grid-item:nth-child(1) {
+            grid-column: 1 / 8;
+            grid-row: 1 / 3;
+        }
+
+        .grid-item:nth-child(2) {
+            grid-column: 8 / 13;
+            grid-row: 1 / 2;
+        }
+
+        .grid-item:nth-child(3) {
+            grid-column: 8 / 13;
+            grid-row: 2 / 4;
+        }
+
+        /* Navigation */
+        .nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            background: rgba(26, 26, 26, 0.9);
+            backdrop-filter: blur(10px);
+        }
+
+        .nav-list {
+            display: flex;
+            list-style: none;
+            padding: 20px;
+        }
+
+        .nav-item {
+            position: relative;
+            margin-right: 30px;
+        }
+
+        .nav-link {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px;
+            display: block;
+            position: relative;
+        }
+
+        .nav-link::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: #3498db;
+            transition: width 0.3s ease;
+        }
+
+        .nav-link:hover::after {
+            width: 100%;
+        }
+
+        /* Image Gallery */
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+
+        .gallery-item {
+            position: relative;
+            overflow: hidden;
+            border-radius: 8px;
+            aspect-ratio: 1;
+        }
+
+        .gallery-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+
+        .gallery-item:hover img {
+            transform: scale(1.1);
+        }
+
+        /* Text Effects */
+        .text-effect {
+            font-size: 4rem;
+            font-weight: bold;
+            background: linear-gradient(45deg, #3498db, #2ecc71);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            animation: gradientMove 5s ease infinite;
+        }
+
+        @keyframes gradientMove {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* Custom Shapes */
+        .shape {
+            width: 200px;
+            height: 200px;
+            background: linear-gradient(45deg, #e74c3c, #c0392b);
+            clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+            animation: rotate 10s linear infinite;
+        }
+
+        @keyframes rotate {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
+        }
+
+        /* Media Queries */
+        @media (max-width: 768px) {
+            .grid-container {
+                grid-template-columns: repeat(6, 1fr);
+            }
+
+            .grid-item:nth-child(1) {
+                grid-column: 1 / 7;
+                grid-row: auto;
+            }
+
+            .grid-item:nth-child(2),
+            .grid-item:nth-child(3) {
+                grid-column: 1 / 7;
+                grid-row: auto;
+            }
+
+            .nav-list {
+                flex-direction: column;
+            }
+
+            .nav-item {
+                margin-right: 0;
+                margin-bottom: 10px;
+            }
+        }
+    </style>
 </head>
 <body>
-  <button onclick="f()">ds</button>
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  <script>
-    async function f(){
-      let status=await razorpay();
-      if(status){
-        alert("success");
-      }else{
-        alert("failed");
-      } 
-    }
+    <nav class="nav">
+        <ul class="nav-list">
+            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Gallery</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+        </ul>
+    </nav>
 
-</script>
+    <div class="parallax-container">
+        <div class="parallax-layer layer-back"></div>
+        <div class="parallax-layer layer-mid"></div>
+        <div class="parallax-layer layer-base">
+            <div class="grid-container">
+                <div class="grid-item">
+                    <h1 class="text-effect">Welcome</h1>
+                    <p>Experience advanced CSS techniques in action.</p>
+                </div>
+                <div class="grid-item">
+                    <div class="shape"></div>
+                </div>
+                <div class="grid-item">
+                    <p>Discover the power of modern web design.</p>
+                </div>
+            </div>
+
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="/api/placeholder/400/400" alt="Gallery Image 1">
+                </div>
+                <div class="gallery-item">
+                    <img src="/api/placeholder/400/400" alt="Gallery Image 2">
+                </div>
+                <div class="gallery-item">
+                    <img src="/api/placeholder/400/400" alt="Gallery Image 3">
+                </div>
+                <div class="gallery-item">
+                    <img src="/api/placeholder/400/400" alt="Gallery Image 4">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-  </html>
+</html>
