--- a/absjc.html
+++ b/absjc.html
@@ -1,45 +1,12 @@
-<div class="table-responsive">
-  <table class="table table-hover table-dark" id="myTable">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Age</th>
-        <th>City</th>
-        <th>Country</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>John Doe</td>
-        <td>25</td>
-        <td>New York</td>
-        <td>USA</td>
-      </tr>
-      <tr>
-        <td>Jane Smith</td>
-        <td>30</td>
-        <td>London</td>
-        <td>UK</td>
-      </tr>
-      <tr>
-        <td>Bob Wilson</td>
-        <td>35</td>
-        <td>Paris</td>
-        <td>France</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <button onclick="razorpay(200000)">Pay</button>
+</body>
 
-<div class="mt-4 d-flex justify-content-end">
-  <button class="btn btn-outline-light" onclick="downloadExcel()">
-    <i class="mdi mdi-file-excel text-success"></i> Export Excel
-  </button>
-</div>
-
-<!-- Add SheetJS library -->
-<script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
-
-<script>
-
-</script>
+</html>
